--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Config
+/src/config/config.js
+
 # Compiled output
 /dist
 /tmp
